syntax = "proto3";

package thresholdsignature;

enum  CalcType {
    PRIVATEKEYSHARE = 0 ;
    LITTLEK         = 1 ;
    ALPHA           = 2 ;
    UNSET           = 3 ;
  } 